# streamlitTest

./: analyze.py  app.py  pyproject.toml
.agent/skills/eda_report/: SKILL.md
report/: diabetes_Report.md  diabetes_model_benchmarks.csv  diabetes_variable_stats.csv
